Adding code coverage and adding test forecast_controller.py
