# backend/stub/swagger_server/models/__init__.py
@@ -6,6 +6,7 @@ from __future__ import absolute_import
 from swagger_server.models.api_data import ApiData
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.inline_response2001 import InlineResponse2001
+from swagger_server.models.inline_response20010 import InlineResponse20010
 from swagger_server.models.inline_response2002 import InlineResponse2002
 from swagger_server.models.inline_response2003 import InlineResponse2003
 from swagger_server.models.inline_response2004 import InlineResponse2004
